@@ -785,17 +785,6 @@ name|put
 argument_list|(
 name|ShardRequest
 operator|.
-name|PURPOSE_GET_TERM_STATS
-argument_list|,
-literal|"GET_TERM_STATS"
-argument_list|)
-expr_stmt|;
-name|map
-operator|.
-name|put
-argument_list|(
-name|ShardRequest
-operator|.
 name|PURPOSE_GET_TOP_IDS
 argument_list|,
 literal|"GET_TOP_IDS"
@@ -917,9 +906,31 @@ name|put
 argument_list|(
 name|ShardRequest
 operator|.
+name|PURPOSE_REFINE_PIVOT_FACETS
+argument_list|,
+literal|"REFINE_PIVOT_FACETS"
+argument_list|)
+expr_stmt|;
+name|map
+operator|.
+name|put
+argument_list|(
+name|ShardRequest
+operator|.
 name|PURPOSE_SET_TERM_STATS
 argument_list|,
 literal|"SET_TERM_STATS"
+argument_list|)
+expr_stmt|;
+name|map
+operator|.
+name|put
+argument_list|(
+name|ShardRequest
+operator|.
+name|PURPOSE_GET_TERM_STATS
+argument_list|,
+literal|"GET_TERM_STATS"
 argument_list|)
 expr_stmt|;
 name|purposes
